tests/miniJava/neg/000527_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { extends if ( 0 ) { } else { } } }
